<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BDDFF"
    tools:context=".view.activities.trip.TripEditActivity">

    <!-- ВЕРХНЯЯ ШАПКА (аватар, имя, дата, настройки) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_account_settings_frame"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Аватар -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="8dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/user_default_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:civ_border_width="0dp"/>

        <!-- Имя аккаунта -->
        <TextView
            android:id="@+id/trip_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AccountInfoStyle"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

        <!-- Текущая дата -->
        <TextView
            android:id="@+id/trip_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AccountInfoStyle"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Поле: Название дневника -->
    <EditText
        android:id="@+id/tripName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/profile_field_frame"
        android:hint="@string/diary_name_label"
        android:textAppearance="@style/ProfileFieldLabelsStyle"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        tools:ignore="RtlSymmetry" />

    <!-- Поле: дата поездки -->
    <EditText
        android:id="@+id/tripStartDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_field_frame"
        android:hint="Дата начала"
        android:focusable="false"
        android:clickable="true"
        android:paddingStart="16dp"
        android:textAppearance="@style/ProfileFieldLabelsStyle"
        app:layout_constraintTop_toBottomOf="@id/tripName"
        app:layout_constraintStart_toStartOf="@id/tripName"
        app:layout_constraintEnd_toEndOf="@id/tripName"
        tools:ignore="RtlSymmetry" />

    <!-- Поле: дата поездки -->
    <EditText
        android:id="@+id/tripEndDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_field_frame"
        android:hint="Дата конца"
        android:focusable="false"
        android:clickable="true"
        android:paddingStart="16dp"
        android:textAppearance="@style/ProfileFieldLabelsStyle"
        app:layout_constraintTop_toBottomOf="@id/tripStartDate"
        app:layout_constraintStart_toStartOf="@id/tripStartDate"
        app:layout_constraintEnd_toEndOf="@id/tripName"
        tools:ignore="RtlSymmetry" />

    <!-- Поле: дата поездки -->
    <EditText
        android:id="@+id/tripType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_field_frame"
        android:hint="Тип путешествия"
        android:paddingStart="16dp"
        android:textAppearance="@style/ProfileFieldLabelsStyle"
        app:layout_constraintTop_toBottomOf="@id/tripEndDate"
        app:layout_constraintStart_toStartOf="@id/tripEndDate"
        app:layout_constraintEnd_toEndOf="@id/tripName"
        tools:ignore="RtlSymmetry" />


    <!-- Кнопка Сохранить -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_save_button_label"
        android:textAppearance="@style/ProfileFieldLabelsStyle"
        android:background="@drawable/profile_save_button_frame"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="src_over"
        app:layout_constraintTop_toBottomOf="@id/tripType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка назад -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@drawable/round_icon_button"
        android:src="@drawable/ic_back"
        android:scaleType="centerInside"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ProgressBar для отображения загрузки -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView для отображения ошибок -->
    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/error_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
